--- a/odoo_db_manager/templates/odoo_db_manager/google_drive_settings.html
+++ b/odoo_db_manager/templates/odoo_db_manager/google_drive_settings.html
@@ -14,7 +14,7 @@
     }
 
     .swal-upload-popup {
-        font-family: 'Cairo', sans-serif;
+        font-family: 'Arial', sans-serif;
     }
 
     .upload-info p {
