--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -28,7 +28,7 @@
     --border-radius: 0.25rem;
     --box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
     
-    --font-family-sans-serif: 'Cairo', sans-serif;
+    --font-family-sans-serif: 'Noto Naskh Arabic', 'Arial', sans-serif;
     --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
 }
 
